# A23DGraphicsProgramming

./: .gitmodules  CMakeLists.txt  README.md
include/components/: BoundingVolumes.h  Components.h  Physics.h
include/components/render-components/: LightingComponents.h  MaterialComponents.h  Mesh.h  MeshComponents.h  RenderComponents.h  TextureComponents.h  UniformComponents.h  Vertices.h
include/core/: DebugLogger.h  FrameBufferObject.h  MainCamera.h  PostProcessingShader.h  Renderer.h  Shader.h
include/helpers/: Callback.h  FilePaths.h  MipViewer.h  PhysicsHelpers.h  Primitives.h  TextureViewer.h  Timers.h
include/lighting/: DirectionalLight.h
include/loader/: CommonLoader.h  Loader.h  MaterialLoader.h  ModelDestroyer.h  ModelLoader.h  MtlLoader.h  ObjLoader.h  RawMesh.h  TextureLoader.h
include/octree/: Node.h  OctreeHelpers.h  Tree.h
include/physics/: BoundingVolumeVisual.h  CollisionDetection.h  CollisionResponse.h  PhysicsHelpers.h  PhysicsSystems.h  TreeBuilder.h
include/physics/components/: Physics.h
include/physics/octree/: Tree.h
include/rendering/: BlinnPhongGeometryShader.h  DeferredLightShader.h  EmissivePbrGeometryShader.h  FrameBufferObject.h  FramebufferObject.h  MipmapTexture.h  RenderBufferObject.h  RenderPipeline.h  TextureBufferObject.h
include/rendering/lighting/: DeferredLightShader.h  DirectionalLightShaderSystem.h
include/rendering/post-processing/: Bloom.h  MipViewerShader.h
include/rendering/shaders/: Bloom.h  BloomShader.h  MipViewerShader.h  PostProcessShader.h  PreFilterShader.h
include/systems/: BasicBinderSystem.h  BasicBinderSystems.h  BasicShaderSystem.h  BasicUniformUpdaterSystem.h  BinderSystem.h  BlinnPhongGeometryShader.h  BlinnPhongShaderSystem.h  ModelMatrixUpdater.h  RotatorSystem.h  TextureBinderSystem.h  UvBinderSystem.h  UvShaderSystem.h
include/systems/lighting/: DirectionalLightShaderSystem.h  PointLightShader.h
include/systems/physics/: BoundingVolumeVisual.h  CollisionSystem.h  PhysicsSystems.h
res/models/: Bole.mtl  Star.mtl  TwoMatCube.mtl  UtahTeapot.mtl
res/models/floor/: Floor.mtl
res/models/japan/: Japan.mtl
res/models/pbr-spheres/: StoneCladding.mtl
res/models/physics/: Crate1.mtl  Crate2.mtl  GreenSphere.mtl  RedSphere.mtl  YellowSphere.mtl
res/models/thick-floor/: ThickFloor.mtl
res/shaders/: ScreenQuad.vert  ScreenQuadV2.vert
res/shaders/basic/: Basic.frag  Basic.vert
res/shaders/blinn-phong/: BlinnPhong.frag  BlinnPhong.vert  BlinnPhongGeometry.frag
res/shaders/geometry/: EmissiveGeometry.frag
res/shaders/lighting/: DirectionalLighting.frag  Lighting.vert  Output.frag  PointLighting.frag
res/shaders/physics/: BoxVolume.vert  SphereVolume.frag  SphereVolume.vert
res/shaders/post-processing/: BloomComposite.frag  BloomDownSample.frag  BloomUpSample.frag  MipView.frag
res/shaders/post-processing/inversion/: Inversion.frag  Inversion.vert
res/shaders/post-processing/pre-filter/: PreFilter.frag
res/shaders/uv/: Uv.frag  Uv.vert
src/: Main.cpp
src/components/: BoundingVolumes.cpp
src/components/render-components/: Mesh.cpp
src/core/: Core.cpp  Core.h  DebugLogger.cpp  FrameBufferObject.cpp  MainCamera.cpp  PostProcessingShader.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScenePhysics.cpp  ScenePhysics.h  Shader.cpp
src/core/scenes/: BloomSceneDemo.cpp  BloomSceneDemo.h  DynamicImpulseDemoScene.cpp  DynamicImpulseDemoScene.h  ImpulseScene.cpp  ImpulseScene.h  OctreeDemoScene.cpp  OctreeDemoScene.h  OdeDemoScene.cpp  OdeDemoScene.h  PlatformDemoScene.cpp  PlatformDemoScene.h  RotationDemoScene.cpp  RotationDemoScene.h  Scene.cpp  Scene.h  TestingScene.cpp  TestingScene.h
src/helpers/: FilePaths.cpp  MipViewer.cpp  PhysicsHelpers.cpp  PhysicsHelpers.h  Primitives.cpp  TextureViewer.cpp  Timers.cpp
src/lighting/: DirectionalLight.cpp
src/loader/: CommonLoader.cpp  Loader.cpp  MaterialLoader.cpp  ModelDestroyer.cpp  MtlLoader.cpp  MtlLoader.h  ObjLoader.cpp  TextureLoader.cpp
src/octree/: OctreeHelpers.cpp
src/physics/: BoundingVolumeVisual.cpp  CollisionDetection.cpp  CollisionResponse.cpp  PhysicsHelpers.cpp  PhysicsSystems.cpp  TreeBuilder.cpp
src/physics/octree/: OctreeHelpers.cpp
src/rendering/: BlinnPhongGeometryShader.cpp  DeferredLightShader.cpp  EmissivePbrGeometryShader.cpp  FrameBufferObject.cpp  FramebufferObject.cpp  MipmapTexture.cpp  RenderBufferObject.cpp  RenderPipeline.cpp  TextureBufferObject.cpp
src/rendering/lighting/: DeferredLightShader.cpp  DirectionalLightShaderSystem.cpp  PointLightShader.cpp
src/rendering/post-processing/: Bloom.cpp  MipViewerShader.cpp
src/rendering/shaders/: Bloom.cpp  BloomShader.cpp  MipViewerShader.cpp  PostProcessShader.cpp  PreFilterShader.cpp
src/systems/: BasicBinderSystem.cpp  BasicBinderSystems.cpp  BasicShaderSystem.cpp  BasicUniformUpdaterSystem.cpp  BinderSystem.cpp  BlinnPhongGeometryShader.cpp  BlinnPhongShaderSystem.cpp  DirectionalLightShaderSystem.cpp  ModelMatrixUpdater.cpp  RotatorSystem.cpp  TextureBinderSystem.cpp  UvBinderSystem.cpp  UvShaderSystem.cpp
src/systems/lighting/: DirectionalLightShaderSystem.cpp  PointLightShader.cpp
src/systems/physics/: BoundingVolumeVisual.cpp  CollisionSystem.cpp  PhysicsSystems.cpp
